@@ -75,11 +75,18 @@ Changes in Go4 v4.3.2 (September 09)
    pressing from the user - stop processing, close connections, 
    save autosave file.
 13.Support TGraphPolar in draw options selection.
+14.Make default location for setting account wide, one should define 
+   export GO4SETTINGS=LOCAL to store/use gui settings from current directory.
+15.Simplify event source handling in user code. It is no longer required that
+   event class 'knows' all its possible sources - only source itself decides 
+   which event class and how it fill. Cleanup all sources class in go4 and 
+   examples. Old code will work as is.       
 
 
 Changes in Go4 v4.3.1 (August 09)
 1. Fix error with connecting DABC/MBS servers second time
-2. Fix error with using autosave files - object was not found correctly there
+2. Fix error (introduced in v4.3.0) with using autosave files - 
+   object was not found correctly there
 3. Set green/red color in analysis status monitor widget
 4. In qt3 version exclude all 3 gui libraries, integrating code in executable (similar to qt4)
 5. Suppress symbolic links in user gui library to avoid compilation problem
@@ -127,7 +134,7 @@ Changes in Go4 v4.3.0 (June 09)
    window - before one can get view panel which two time larger. 
 19.Go4 event loop optimization - simple analysis with GUI runs 10-20% faster than before.
 20.Configuration of Qt4 GUI is stored by default in current directory in Go4.conf file.
-   One can do "export Go4SETTINGS=ACCOUNT" to store GUI settings in account-wide location. 
+   One can do "export GO4SETTINGS=ACCOUNT" to store GUI settings in account-wide location. 
 21.Replace "disable" by "enable" check boxes in analysis configuration -  
    makes configuration more intuitive. Shortcut of each step configuration can
    be seen together with step name on the top of analysis configuration panel.   
